2016-05-04 Dong H. Ahn <ahn1@llnl.gov>
	* git show --stat 42a9e 37e25 3b491 \
	bc791 fecc9 dac19 81dcf 07417 39efd 6727:
	Modernize the use of autotools 
	    Drop support for bundling foreign library sources for easier packaging
	    `make` now only builds the main binaries and libraries
	    `make install` will install them but not the test codes/scripts
	    `make check` will build the tests and scripts
	    Add --with-test-installed to run tests on installed launchmon.
	Too many files have been changed and use git show --stat above
	so that one can retrieve the list of files that have changed


2014-04-30 Matt LeGendre <legendre1@llnl.gov> Dong H. Ahn <ahn1@llnl.gov>
	* configure.ac,
	config/x_ac_handshake.m4,
	tools/cobo/src/cobo.c, tools/cobo/src/Makefile.am, 
	tools/handshake/handshake.c, 
	tools/handshake/Makefile.am, 
	tools/handshake/handshake.h, 
	tools/Makefile.am, 
	launchmon/src/linux/lmon_api/lmon_fe.cxx,
	launchmon/src/linux/lmon_api/lmon_daemon_internal.cxx:
	Enhanced security handshake protocol for COBO. 
	Configure now supports munge- and file-based COBO
	authentication. Munge is available at 
	https://code.google.com/p/munge/


2014-04-30 Matt LeGendre <legendre1@llnl.gov>
	* launchmon/src/sdbg_rm_map.hxx,
	launchmon/src/sdbg_rm_map.cxx,
	launchmon/src/sdbg_opt.cxx,
	launchmon/src/sdbg_opt.hxx,
	launchmon/src/linux/lmon_api/lmon_fe.cxx:
	Improved how the options and arguments of RM launchers
	and tool daemons are parsed and stored.


2014-04-11 Matt LeGendre <legendre1@llnl.gov>
	* launchmon/src/linux/sdbg_linux_launchmon.cxx:
	Suppressed a warning message about invalid MPIR state
	transition, as the Spindle project works around 
	an OpenMPI/Orterun issue by creating an unexpected 
	MPIR state transition. Spindle is a new open-source 
	scalable dynamic loading capability that uses LaunchMON
	(https://github.com/hpc/Spindle).


2014-04-10 Dong H. Ahn <ahn1@llnl.gov>
	* launchmon/src/rm_openrte.conf: