@@ -28,6 +28,7 @@
 ##--------------------------------------------------------------------------------
 ##
 ##  Update Log:
+##        Feb 20 2015 andrewg@cray.com: Updated for XE/XK/XC systems
 ##        Oct 3 2011 DHA: Created file.
 ##
 ##
@@ -45,12 +46,13 @@
 ##
 
 RM=alps
-RM_MPIR=STD
+RM_MPIR=STD_CRAY
 RM_launcher=aprun
 RM_launcher=aprun.orig
-RM_launcher_id=RM_launcher|sym|run_aprun
+RM_launcher=alps_fe_colocator
+RM_launcher_id=RM_launcher|sym|AprunUsageMsg
 RM_jobid=RM_launcher|pid
 RM_launch_helper=alps_fe_colocator
 RM_signal_for_kill=SIGINT
 RM_fail_detection=false
-RM_launch_str=--be_starter=%b --apid=%j %d %o --lmonsharedsec=%s --lmonsecchk=%c
+RM_launch_str=--be_starter=%b --apid=%j --daemon=%d %o --lmonsharedsec=%s --lmonsecchk=%c
